# dsa-scout

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  dsa_scout.ipynb  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
corpus_cache/: corpus_v3.json  training_corpus_v3.json
docs/: DATA.md  METHODS.md
dsa_scout/: __init__.py  cli.py  corpus.py  experiment.py  indexer.py  logging.py  metrics.py  oracle.py  plots.py  scorers.py  style.py  training.py
results/: hybrid_weight_sweep.json  manifest.json  marginal_over_recency.json  metadata.json  recall_by_layer.json  recall_by_text_type.json  recall_vs_k.json  summary_stats.json  trained_indexer.pt  training_log.json
scripts/: check_wordcount.py  make.py  verify_release.py
tests/: conftest.py  test_corpus.py  test_experiment.py  test_indexer.py  test_metrics.py  test_oracle.py  test_plots_and_diagram.py  test_release_verification.py  test_scorers.py  test_training.py
