[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsa-scout"
version = "0.4.0"
description = "Empirical study of DeepSeek Sparse Attention's Lightning Indexer on GPT-2 small"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DSA-Scout contributors" }]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "datasets>=2.14",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "typer>=0.9",
    "rich>=13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
]
notebook = ["jupyter>=1.0", "ipykernel>=6.25"]

[project.scripts]
dsa-scout = "dsa_scout.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["dsa_scout"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
testpaths = ["tests"]

[tool.coverage.run]
data_file = ".pytest_tmp/.coverage"
